--- a/Debut/CMakeLists.txt
+++ b/Debut/CMakeLists.txt
@@ -57,6 +57,7 @@ add_subdirectory(vendor/spdlog)
 add_subdirectory(vendor/yaml-cpp)
 add_subdirectory(vendor/assimp)
 add_subdirectory(vendor/brotli)
+add_subdirectory(vendor/corto)
 
 
 # Link dependencies 
@@ -73,6 +74,7 @@ target_link_libraries(Debut
 	PUBLIC assimp
 	PRIVATE brotlienc-static
 	PRIVATE brotlidec-static
+	PRIVATE corto
 )
 
 # Define variables
@@ -108,6 +110,7 @@ target_include_directories(Debut
 	PUBLIC vendor/entt/include
 	PUBLIC vendor/assimp/include
 	PRIVATE vendor/brotli/c/include
+	PRIVATE vendor/corto/include
 )
 
 # Keep the project structure
