--- a/Debut/CMakeLists.txt
+++ b/Debut/CMakeLists.txt
@@ -41,6 +41,13 @@ set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE INTERNAL "" FORCE)
 configure_file("${PROJECT_SOURCE_DIR}/vendor/assimp/include/assimp/config.h.in" "${PROJECT_SOURCE_DIR}/vendor/assimp/include/assimp/config.h")
 configure_file("${PROJECT_SOURCE_DIR}/vendor/assimp/contrib/zlib/zconf.h.cmakein" "vendor/assimp/contrib/zlib/zconf.h")
 
+# Jolt Physics
+set(TARGET_UNIT_TESTS OFF CACHE INTERNAL "" FORCE)
+set(TARGET_HELLO_WORLD OFF CACHE INTERNAL "" FORCE)
+set(TARGET_PERFORMANCE_TEST OFF CACHE INTERNAL "" FORCE)
+set(TARGET_SAMPLES OFF CACHE INTERNAL "" FORCE)
+set(TARGET_VIEWER OFF CACHE INTERNAL "" FORCE)
+
 add_library(Debut STATIC ${Debut_SRC} ${Debut_EXT})
 
 set_property(TARGET Debut PROPERTY MSVC_RUNTIME_LIBRARY MultiThreaded)
@@ -57,6 +64,7 @@ add_subdirectory(vendor/spdlog)
 add_subdirectory(vendor/yaml-cpp)
 add_subdirectory(vendor/assimp)
 add_subdirectory(vendor/lz4/build/cmake)
+add_subdirectory(vendor/jolt-physics/Build)
 
 
 # Link dependencies 
@@ -71,6 +79,7 @@ target_link_libraries(Debut
 	PUBLIC yaml-cpp
 	PUBLIC Dwmapi.dll
 	PUBLIC assimp
+	PUBLIC Joltd
 	PRIVATE lz4_static
 )
 
@@ -106,6 +115,7 @@ target_include_directories(Debut
 	PUBLIC vendor/glm
 	PUBLIC vendor/entt/include
 	PUBLIC vendor/assimp/include
+	PUBLIC vendor/jolt-physics/Jolt/
 	PRIVATE vendor/lz4/lib
 	PRIVATE vendor/other
 )
