Managed to compile & link Jolt
Started integration of 3D physics

--- a/Debut/CMakeLists.txt
+++ b/Debut/CMakeLists.txt
@@ -53,6 +53,22 @@ add_library(Debut STATIC ${Debut_SRC} ${Debut_EXT})
 set_property(TARGET Debut PROPERTY MSVC_RUNTIME_LIBRARY MultiThreaded)
 set_property(TARGET Debut PROPERTY CXX_STANDARD 17)
 
+
+# Define variables
+target_compile_definitions(Debut PUBLIC
+	GLFW_INCLUDE_NONE
+	_CRT_SECURE_NO_WARNINGS
+	YAML_CPP_STATIC_DEFINE
+	NOMINMAX
+	JPH_DISABLE_CUSTOM_ALLOCATOR
+	JPH_DISABLE_TEMP_ALLOCATOR
+)
+
+target_compile_definitions(Debut PUBLIC
+	$<$<CONFIG:Debug>:DBT_DEBUG=1>
+	$<$<CONFIG:Release>:DBT_RELEASE=1>
+)
+
 # Include dependencies
 add_subdirectory(vendor/glad)
 add_subdirectory(vendor/box2d)
@@ -65,6 +81,9 @@ add_subdirectory(vendor/yaml-cpp)
 add_subdirectory(vendor/assimp)
 add_subdirectory(vendor/lz4/build/cmake)
 add_subdirectory(vendor/jolt-physics/Build)
+
+target_compile_definitions(Jolt PRIVATE JPH_DISABLE_CUSTOM_ALLOCATOR=1)
+target_compile_definitions(Jolt PRIVATE JPH_DISABLE_TEMP_ALLOCATOR=1)
 
 
 # Link dependencies 
@@ -82,21 +101,6 @@ target_link_libraries(Debut
 	PUBLIC Jolt
 	PRIVATE lz4_static
 )
-
-# Define variables
-
-target_compile_definitions(Debut PUBLIC
-	GLFW_INCLUDE_NONE
-	_CRT_SECURE_NO_WARNINGS
-	YAML_CPP_STATIC_DEFINE
-	NOMINMAX
-)
-
-target_compile_definitions(Debut PUBLIC
-	$<$<CONFIG:Debug>:DBT_DEBUG=1>
-	$<$<CONFIG:Release>:DBT_RELEASE=1>
-)
-
 
 IF(WINDOWS_BUILD)
     ADD_DEFINITIONS(-DDBT_PLATFORM_WINDOWS)
