--- a/Debutant/CMakeLists.txt
+++ b/Debutant/CMakeLists.txt
@@ -25,6 +25,11 @@ target_link_libraries(Debutant
 	PUBLIC Debut
 )
 
+target_compile_definitions(Debutant PUBLIC
+	JPH_DISABLE_CUSTOM_ALLOCATOR
+	JPH_DISABLE_TEMP_ALLOCATOR
+)
+
 IF(WINDOWS_BUILD)
     ADD_DEFINITIONS(-DDBT_PLATFORM_WINDOWS)
 ENDIF(WINDOWS_BUILD)
